# CapStash-Core

./: .cirrus.yml  .gitignore  CONTRIBUTING.md  COPYING  Makefile.am  README.md  SECURITY.md  aclocal.m4  autogen.sh  configure  configure.ac  configure~  libCapStashconsensus.pc  libCapStashconsensus.pc.in  libtool
.tx/: config
build_msvc/: CapStash.sln  CapStash_config.h.in  README.md  msvc-autogen.py  vcpkg.json
ci/: lint_imagefile  lint_run_all.sh  test_imagefile  test_run_all.sh
contrib/: README.md  filter-lcov.py  valgrind.supp
depends/: README.md  description.md  packages.md
doc/: CapStash-conf.md  Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  (+5 more)
doc/man/: CapStash-cli.1  CapStash-qt.1  CapStash-tx.1  CapStash-util.1  CapStash-wallet.1  CapStashd.1  Makefile.am
share/: genbuild.sh  setup.nsi  setup.nsi.in
src/: .clang-tidy  CapStash-chainstate.cpp  CapStash-cli-res.rc  CapStash-cli.cpp  CapStash-tx-res.rc  CapStash-tx.cpp  CapStash-util-res.rc  CapStash-util.cpp  (+161 more)
(+1632 files in other folders)
