dist_man1_MANS=

if BUILD_CAPSTASHD
  dist_man1_MANS+=CapStashd.1
endif

if ENABLE_QT
  dist_man1_MANS+=CapStash-qt.1
endif

if BUILD_CAPSTASH_CLI
  dist_man1_MANS+=CapStash-cli.1
endif

if BUILD_CAPSTASH_TX
  dist_man1_MANS+=CapStash-tx.1
endif

if BUILD_CAPSTASH_UTIL
  dist_man1_MANS+=CapStash-util.1
endif

if ENABLE_WALLET
if BUILD_CAPSTASH_WALLET
  dist_man1_MANS+=CapStash-wallet.1
endif
endif
